# deformable-sim

./: .gitignore  README.md  pyproject.toml
data/: HHHHH.pkl  HHHHM.pkl  HHHLM.pkl  HHHMM.pkl  HHLHH.pkl  HHLHL.pkl  HHLHM.pkl  HHLLL.pkl  HHLMH.pkl  HHLML.pkl  HHLMM.pkl  HHMHH.pkl  HHMHL.pkl  HHMHM.pkl  HHMLL.pkl  HHMMH.pkl  HHMML.pkl  HHMMM.pkl
scripts/: best_parameter.py  convert_image_to_video.py  report.py
src/data_preparer/: containers.py  parser.py  utils.py
src/data_preparer/config/: data_config.yaml
src/envs/: package_parameter_optim.py
src/model/: builder.py  inside_object.py  loss.py  package.py  suction_cup.py  utils.py
